charts/oauth2-proxy/snips.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-signin: https://oauth.imdevinc.com/oauth2/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: https://oauth.imdevinc.com/oauth2/auth
    nginx.ingress.kubernetes.io/proxy-buffer-size: 512k
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/ingress-hostname-source: annotation-only
  name: snips
  namespace: snips
spec:
  ingressClassName: nginx
  rules:
  - host: snips.imdevinc.com
    http:
      paths:
      - backend:
          service:
            name: snips
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - snips.imdevinc.com
    secretName: snips-tls
